--- a/deno.json
+++ b/deno.json
@@ -7,10 +7,10 @@
     "@steady/shared": "./packages/shared/mod.ts",
     "@steady/json-schema": "./packages/json-schema/mod.ts",
     "@steady/json-pointer": "./packages/json-pointer/mod.ts",
-    "@std/dotenv": "jsr:@std/dotenv@^0.218.0",
-    "@std/cli": "jsr:@std/cli@^0.218.0",
-    "@std/assert": "jsr:@std/assert@^1.0.0",
-    "@std/yaml": "jsr:@std/yaml@^1.0.0"
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
+    "@std/cli": "jsr:@std/cli@^1.0.24",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@std/yaml": "jsr:@std/yaml@^1.0.10"
   },
   "tasks": {
     "dev": "deno run --watch --allow-read --allow-net --allow-env --allow-write cmd/steady.ts --auto-reload",
@@ -56,6 +56,6 @@
         "no-explicit-any"
       ]
     },
-    "exclude": ["oas-tools/**"]
+    "exclude": ["oas-tools/**", "packages/json-schema/test-suite/"]
   }
 }
