--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
   release:
-    types: [created]
+    types: [published]
   workflow_dispatch:
     inputs:
       action:
