--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,19 +3,14 @@ name: Release
 on:
   push:
     branches: [main]
-  pull_request:
-    types: [opened, edited]
-  workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+  
 jobs:
-  prepare-release:
-    name: Prepare Release
+  release:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      pull-requests: write
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,6 +20,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v2
         with:
+          deno-version: v2.5.x
           cache: true
 
       - name: Configure Git
@@ -45,7 +41,23 @@ jobs:
             fi
           done
 
-      - name: Run pls prep
-        run: deno run -A jsr:@dgellow/pls prep --storage=github --execute
+      - name: Check if release commit
+        id: check
+        run: |
+          if git log -1 --pretty=%B | grep -q "^chore: release v"; then
+            echo "is_release=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_release=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create release (on release commit)
+        if: steps.check.outputs.is_release == 'true'
+        run: deno run -A jsr:@dgellow/pls --storage=github --execute
         env:
-          GITHUB_TOKEN: ${{ secrets.PLS_RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PLS_RELEASE_TOKEN }}         
+
+      - name: Create/update release PR (on regular commit)
+        if: steps.check.outputs.is_release == 'false'
+        run: deno run -A jsr:@dgellow/pls prep --execute
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
